cmd-line support

--- a/Hands-on-Project/main.ipynb
+++ b/Hands-on-Project/main.ipynb
@@ -80,9 +80,7 @@
   {
    "cell_type": "markdown",
    "id": "8a3970ee-17a6-488d-b5b3-e10c49699cdf",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Entry Point"
    ]
@@ -135,11 +133,18 @@
     "        \n",
     "# Execution Starts Here\n",
     "if __name__ == \"__main__\":\n",
+    "\n",
+    "    # Simulating the command line argument as we can't use it in notebooks (try argparse if you need in normal IDE / editor)\n",
+    "    sys.argv = [\"/home/neon/Essentials/Jupyter/Hands-on-Project/a.zip\", \n",
+    "                \"/home/neon/Essentials/Jupyter/Hands-on-Project/a/\", \n",
+    "                \"a.ack\", \n",
+    "                \"transaction_master\"] \n",
     "    \n",
-    "    zip_file: str = \"/home/neon/Essentials/Jupyter/Hands-on-Project/a.zip\"\n",
-    "    dest_file_path: str = \"/home/neon/Essentials/Jupyter/Hands-on-Project/a/\"\n",
-    "    ack_filename: str = \"a.ack\"\n",
-    "    hive_table_name: str = \"transaction_master\"\n",
+    "    # Assigning the cmd line arguments to variables to use in program\n",
+    "    zip_file: str = sys.argv[0]\n",
+    "    dest_file_path: str = sys.argv[1]\n",
+    "    ack_filename: str = sys.argv[2]\n",
+    "    hive_table_name: str = sys.argv[3]\n",
     "\n",
     "    # Unzip the specified file and store in destination path\n",
     "    unzip_file(zip_file, dest_file_path)\n",
@@ -151,7 +156,7 @@
     "    try:\n",
     "        # If the file not empty, convert the ack file to Data Frame\n",
     "        df = BigDataProcessing.get_data_frame(dest_file_path+'/'+ack_filename)\n",
-    "        df = df.withColumn(\"filesize\", regexp_replace(col(\"filesize\"), r\"\\D+\", \"\"))\n",
+    "        df = df.withColumn(\"filesize\", regexp_replace(col(\"filesize\"), r\"\\D+$\", \"\"))\n",
     "    \n",
     "        # Collect the data\n",
     "        rows = df.collect()\n",
